...

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movieList_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{isRecyclerViewVisible ? View.VISIBLE : View.GONE}"/>

        <TextView
            android:id="@+id/movieList_emptyPlaceHolder__textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="56dp"
            android:fontFamily="sans-serif-medium"
            android:layout_gravity="center"
            android:gravity="center"
...
